--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
   },
   "devDependencies": {
     "@types/jest": "^23.3.10",
     "@types/node": "^10.12.15",
     "@types/react": "^16.7.17",
     "@types/react-dom": "^16.0.11",
+    "prettier": "^1.15.3",
+    "prettier-tslint": "^0.4.1",
     "typescript": "^3.2.2"
   }
 }
