--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@types/jest": "^23.3.10",
+    "@types/lodash": "^4.14.119",
     "@types/material-ui": "^0.21.5",
     "@types/node": "^10.12.17",
     "@types/react": "^16.7.17",
