--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.7.0",
+    "chroma-js": "^2.0.2",
     "lodash": "^4.17.11",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts-ts": "3.1.0",
-    "react-simple-maps": "^0.12.1"
+    "react-simple-maps": "^0.12.1",
+    "react-tooltip": "^3.9.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -17,12 +19,14 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/chroma-js": "^1.4.1",
     "@types/jest": "^23.3.10",
     "@types/lodash": "^4.14.119",
     "@types/material-ui": "^0.21.5",
     "@types/node": "^10.12.17",
     "@types/react": "^16.7.17",
     "@types/react-dom": "^16.0.11",
+    "@types/react-tooltip": "^3.9.0",
     "typescript": "^3.2.2"
   }
 }
